--- a/src/blogdevweb/static/css/style.css
+++ b/src/blogdevweb/static/css/style.css
@@ -102,7 +102,7 @@ button:hover, .save-button:hover {
 
 /* Navbar style */
 nav{
-    background-color: #800080;
+    background-color: #800080 !important;
 }
 
 .nav-link {
