--- a/src/blogdevweb/templates/list_article.html
+++ b/src/blogdevweb/templates/list_article.html
@@ -20,52 +20,60 @@
         <!--Our JS file-->
 		<script src="../static/js/javascript.js"></script>
         <!--<script src="../static/js/javascript.js"></script>-->
+		
     </head>
 
 	<body>
-            <nav class="navbar navbar-expand-md">
-                <a class="navbar-brand nav-button nav-home-button nav-item" href="list_article.html">Alpha Blog</a>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="nav navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Artigos
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="list_article.html">Artigos publicados</a>
-                                <a class="dropdown-item" href="list_article.html">Artigos pendentes</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="add_article.html">Criar artigo</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Categorias
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Artes</a>
-                                <a class="dropdown-item" href="#">Política</a>
-                                <a class="dropdown-item" href="#">Ficção</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="add_category.html">Criar categoria</a>
-                            </div>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Usuários
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="list_user.html">Usuários pendentes</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="add_user.html">Criar usuário</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a class="nav-link nav-profile-button" href="login.html">Login <i class="fas fa-user"></i></a></li>
-                    </ul>
-                </div>
-            </nav>
+          
+		
+			<nav class="navbar navbar-expand-lg">
+			  <a class="navbar-brand nav-button nav-home-button nav-item" href="list_article.html">Alpha Blog</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav mr-auto">
+				  <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  Artigos
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					  <a class="dropdown-item" href="list_article.html">Artigos publicados</a>
+					  <a class="dropdown-item" href="list_article.html">Artigos pendentes</a>
+					  <a class="dropdown-item" href="add_article.html">Criar artigo</a>
+					</div>
+				  </li>
+				  
+				  <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  Categorias
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					  <a class="dropdown-item" href="list_article.html">Artes</a>
+					  <a class="dropdown-item" href="list_article.html">Política</a>
+					  <a class="dropdown-item" href="list_article.html">Ficção</a>
+					  <a class="dropdown-item" href="add_category.html">Criar categoria</a>
+					</div>
+				  </li>
+				  			  
+				  <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  Usuários
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					  <a class="dropdown-item" href="list_user.html">Usuários pendentes</a>
+					  <a class="dropdown-item" href="add_user.html">Criar usuário</a>
+					</div>
+				  </li>
+				</ul>
+				
+
+				<ul class="nav navbar-nav">
+					<a class="nav-link" href="login.html">Login <i class="fas fa-user"></i></a>
+				</ul>
+			  </div>
+			</nav>
+		
 		
             <div class="container list-container">
 		<div class="list-page-title">
