--- a/src/blogdevweb/templates/add_user.html
+++ b/src/blogdevweb/templates/add_user.html
@@ -20,9 +20,8 @@ and open the template in the editor.
         <!-- Icons library Font Awesome -->
         <script src="https://kit.fontawesome.com/978f116280.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-        <script src="jquery-3.4.1.min.js"></script>
-        <script src="popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../static/js/jquery-3.5.1.min.js"></script>
+        <script src="../static/js/bootstrap.min.js"></script>
         <!--Our JS file-->
         <!--<script src="../static/js/javascript.js"></script>-->
     </head>
