--- a/src/blogdevweb/templates/login.html
+++ b/src/blogdevweb/templates/login.html
@@ -10,19 +10,18 @@ and open the template in the editor.
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../static/css/bootstrap.min.css" />
         <!-- Our CSS file -->
-        <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
         <!-- Title font -->
-        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
         <!--Text font-->
-        <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@600&display=swap" rel="stylesheet" />
         <!-- Icons library Font Awesome -->
         <script src="https://kit.fontawesome.com/978f116280.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-        <script src="jquery-3.4.1.min.js"></script>
-        <script src="popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../static/js/jquery-3.5.1.min.js"></script>
+        <script src="../static/js/bootstrap.min.js"></script>
         <!--Our JS file-->
         <!--<script src="../static/js/javascript.js"></script>-->
     </head>
